Add js and update css

--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,5 @@
 @import "blocks/footer.css";
 @import "blocks/header.css";
 @import "blocks/hero.css";
+@import "blocks/help-block.css";
+@import "blocks/result.css";
