--- a/css/blocks/btn.css
+++ b/css/blocks/btn.css
@@ -8,7 +8,7 @@
     border: none;
 	border-radius: 50px;
 	border: 2px solid #FFFFFF;
-    padding: 10px;
+    padding: 10px 20px;
 	font-family: "Caveat", cursive;
 	transition: color 0.3s ease-out, border-color 0.3s ease-out;
 }
@@ -17,4 +17,12 @@
 .btn:focus-visible {
 	color: rgba(255, 255, 255, 0.7);
     border-color: rgba(255, 255, 255, 0.7);
+}
+
+.btn--yes {
+    background: radial-gradient(rgb(0, 219, 11), rgb(18, 83, 4));
+}
+
+.btn--no {
+    background: radial-gradient(rgb(219, 0, 0), rgb(83, 4, 4));
 }
